"""Compact public NML facade."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")

nml_rust_library(
    name = "nml",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    deps = [
        "//crates/nml-checkpoint:nml_checkpoint",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-runtime:nml_runtime",
        "//crates/nml-tensor:nml_tensor",
        "//crates/nml-types:nml_types",
    ],
    proc_macro_deps = ["//crates/nml-derive:nml_derive"],
    visibility = ["//visibility:public"],
)

nml_rust_test(
    name = "structural_contract_test",
    srcs = ["tests/structural_contract.rs"],
    crate_root = "tests/structural_contract.rs",
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-types:nml_types",
    ],
)

# The same source is compiled twice so backend selection cannot accidentally
# fork the loading, binding, or numerical contract. CUDA remains a real-device
# test and is selected only by the repository's CUDA configuration.
nml_rust_test(
    name = "linear_cpu_contract_test",
    size = "large",
    srcs = ["tests/linear_contract.rs"],
    crate_root = "tests/linear_contract.rs",
    rustc_env = {"NML_LINEAR_BACKEND": "cpu"},
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-types:nml_types",
        "@rust_crates//safetensors",
        "@rust_crates//serde_json",
    ],
)

nml_rust_test(
    name = "linear_cuda_contract_test",
    size = "large",
    srcs = ["tests/linear_contract.rs"],
    crate_root = "tests/linear_contract.rs",
    local = True,
    rustc_env = {"NML_LINEAR_BACKEND": "cuda"},
    # The device, driver, and plugin-visible process state are not declared
    # file inputs.  This contract must execute on the GPU host every time even
    # though its compiled binary and CUDA runfiles remain cacheable.
    tags = [
        "external",
        "exclusive",
        "requires-gpu",
    ],
    data = ["//platforms/cuda:runtime_system_driver"],
    env = {
        "NML_CUDA_RUNTIME_RLOCATION": "$(rlocationpath //platforms/cuda:runtime_system_driver)",
    },
    target_compatible_with = select({
        "//platforms:cuda.enabled": ["@platforms//os:linux"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-types:nml_types",
        "@rust_crates//safetensors",
        "@rust_crates//serde_json",
    ],
)

nml_rust_test(
    name = "attention_cpu_contract_test",
    size = "large",
    srcs = ["tests/attention_contract.rs"],
    crate_root = "tests/attention_contract.rs",
    rustc_env = {"NML_ATTENTION_BACKEND": "cpu"},
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-tensor:nml_tensor",
        "//crates/nml-types:nml_types",
        "@rust_crates//safetensors",
    ],
)

nml_rust_test(
    name = "attention_cuda_contract_test",
    size = "large",
    srcs = ["tests/attention_contract.rs"],
    crate_root = "tests/attention_contract.rs",
    local = True,
    rustc_env = {"NML_ATTENTION_BACKEND": "cuda"},
    tags = [
        "external",
        "exclusive",
        "requires-gpu",
    ],
    data = ["//platforms/cuda:runtime_system_driver"],
    env = {
        "NML_CUDA_RUNTIME_RLOCATION": "$(rlocationpath //platforms/cuda:runtime_system_driver)",
    },
    target_compatible_with = select({
        "//platforms:cuda.enabled": ["@platforms//os:linux"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-tensor:nml_tensor",
        "//crates/nml-types:nml_types",
        "@rust_crates//safetensors",
    ],
)

# Model-enabling primitives and composites share one permanent numerical
# contract across CPU and CUDA. Keeping this separate from a particular model
# prevents checkpoint architecture choices from defining the tensor API.
nml_rust_test(
    name = "neural_ops_cpu_contract_test",
    size = "large",
    srcs = ["tests/neural_ops_contract.rs"],
    crate_root = "tests/neural_ops_contract.rs",
    rustc_env = {"NML_NEURAL_OPS_BACKEND": "cpu"},
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-types:nml_types",
    ],
)

nml_rust_test(
    name = "neural_ops_cuda_contract_test",
    size = "large",
    srcs = ["tests/neural_ops_contract.rs"],
    crate_root = "tests/neural_ops_contract.rs",
    local = True,
    rustc_env = {"NML_NEURAL_OPS_BACKEND": "cuda"},
    tags = [
        "external",
        "exclusive",
        "requires-gpu",
    ],
    data = ["//platforms/cuda:runtime_system_driver"],
    env = {
        "NML_CUDA_RUNTIME_RLOCATION": "$(rlocationpath //platforms/cuda:runtime_system_driver)",
    },
    target_compatible_with = select({
        "//platforms:cuda.enabled": ["@platforms//os:linux"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-types:nml_types",
    ],
)

nml_rust_test(
    name = "execution_performance_cpu_contract_test",
    size = "large",
    srcs = ["tests/execution_performance_contract.rs"],
    crate_root = "tests/execution_performance_contract.rs",
    env = {"RUST_TEST_NOCAPTURE": "1"},
    rustc_env = {"NML_PERFORMANCE_BACKEND": "cpu"},
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-types:nml_types",
    ],
)

nml_rust_test(
    name = "execution_performance_cuda_contract_test",
    size = "large",
    srcs = ["tests/execution_performance_contract.rs"],
    crate_root = "tests/execution_performance_contract.rs",
    local = True,
    rustc_env = {"NML_PERFORMANCE_BACKEND": "cuda"},
    tags = [
        "external",
        "exclusive",
        "requires-gpu",
    ],
    data = ["//platforms/cuda:runtime_system_driver"],
    env = {
        "NML_CUDA_RUNTIME_RLOCATION": "$(rlocationpath //platforms/cuda:runtime_system_driver)",
        "RUST_TEST_NOCAPTURE": "1",
    },
    target_compatible_with = select({
        "//platforms:cuda.enabled": ["@platforms//os:linux"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-types:nml_types",
    ],
)

# As with the low-level runtime contract, this output-only edge lets a remote
# builder cache the exact test binary while leaving CUDA runtime assembly to
# the host that will execute it.
filegroup(
    name = "linear_cuda_contract_binary",
    srcs = [":linear_cuda_contract_test"],
    testonly = True,
    visibility = ["//:__pkg__"],
)

filegroup(
    name = "attention_cuda_contract_binary",
    srcs = [":attention_cuda_contract_test"],
    testonly = True,
    visibility = ["//:__pkg__"],
)

filegroup(
    name = "neural_ops_cuda_contract_binary",
    srcs = [":neural_ops_cuda_contract_test"],
    testonly = True,
    visibility = ["//:__pkg__"],
)

filegroup(
    name = "execution_performance_cuda_contract_binary",
    srcs = [":execution_performance_cuda_contract_test"],
    testonly = True,
    visibility = ["//:__pkg__"],
)
